2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* SLIM-TIPS: Fix.
	* md4.el(md4-pack-int16): Taken form ntlm.el
	(md4-pack-int32): Ditto.
	(md4-unpack-int16): Ditto.
	(md4-unpack-int32): Ditto.
	* ntlm.el (pack-int16): Delete.
	(pack-int32): Delete.
	(unpack-int16): Delete.
	(unpack-int32): Delete.

2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* SLIM-TIPS: Fix.
	* sasl.el(sasl-mechanisms): Add NTLM.
	(sasl-mechanism-alist): Add NTLM.

2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.
	* test/test-hmac-md5.el: New file.
	* test/test-hmac-sha1.el: New file.
	* test/test-sasl.el: New file.
	* lunit.el: New file.

2001-02-16  Taro Kawagishi <taro.kawagishi@nokia.com>

	* md4.el: New file.
	* ntlm.el: New file.
	* sasl-ntlm.el: New file.

2000-12-23  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* smtpmail.el (smtpmail-send-it): Use
	`binary-write-decoded-region' instead of `binary-write-region'.

	* mmexternal.el (mmexternal-require-buffer): Use
	`binary-insert-encoded-file' instead of
	`binary-insert-file-contents'.
	(mime-write-entity-body): Use `binary-write-decoded-region'
	instead of `binary-write-region'.

	* mmbuffer.el (mime-write-entity-body): Use
	`binary-write-decoded-region' instead of `binary-write-region'.

	* mel.el: - Don't require `raw-io'.
	(8bit-insert-encoded-file): New function.
	(8bit-write-decoded-region): New function.
	(7bit-insert-encoded-file): New alias.
	(7bit-write-decoded-region): New alias.
	(binary-insert-encoded-file): New alias.
	(binary-find-file-noselect): New function.
	(binary-funcall): New function.
	(binary-to-text-funcall): New function.
	(mime-insert-encoded-file of "base64"): Use
	`binary-insert-encoded-file' instead of
	`binary-insert-file-contents'.

	* FLIM-API.en (base64-decode-string): New function.
	(base64-encode-string): New function.
	(ENCODING-write-decoded-region): New function.
	(ENCODING-insert-encoded-file): New function.

	* raw-io.el: Deleted.
