@@ -37,7 +37,8 @@
 ;;; Code:
 
 (defvar sasl-mechanisms
-  '("CRAM-MD5" "DIGEST-MD5" "PLAIN" "LOGIN" "ANONYMOUS" "NTLM"))
+  '("CRAM-MD5" "DIGEST-MD5" "PLAIN" "LOGIN" "ANONYMOUS"
+    "NTLM" "SCRAM-MD5"))
 
 (defvar sasl-mechanism-alist
   '(("CRAM-MD5" sasl-cram)
@@ -45,7 +46,8 @@
     ("PLAIN" sasl-plain)
     ("LOGIN" sasl-login)
     ("ANONYMOUS" sasl-anonymous)
-    ("NTLM" sasl-ntlm)))
+    ("NTLM" sasl-ntlm)
+    ("SCRAM-MD5" sasl-scram)))
 
 (defvar sasl-unique-id-function #'sasl-unique-id-function)
 
